<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_toolbar"
            style="@style/MyToolbarTheme"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_left_24dp">

        <TextView
                android:id="@+id/tv_title_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="8dp"
                android:text="@string/add_category"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:id="@+id/tv_select_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/select_icon_for_new_category"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_category"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/et_category_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_icon"
            app:spanCount="3"
            tools:listitem="@layout/item_category_vert" />

    <EditText
            android:id="@+id/et_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:hint="@string/category_name"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_add_category"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/iv_add_category"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg_sub"
            android:elevation="4dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_category_name" />
</androidx.constraintlayout.widget.ConstraintLayout>